--- a/index.html
+++ b/index.html
@@ -146,8 +146,7 @@
 <canvas id="particles"></canvas>
 
 <div class="login-container">
-  <img src="https://upload.wikimedia.org
-  /wikipedia/commons/4/42/Sound-icon.svg" alt="Logo" class="logo">
+  <img src="bh2.png" alt="Logo" class="logo">
   <h2>🔒 Argi Login Portal</h2>
   <form id="loginForm" autocomplete="off">
     <div class="form-group">
